--- a/stagioni/2022_2023/coppa/giornate/1/partite/2.html
+++ b/stagioni/2022_2023/coppa/giornate/1/partite/2.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Paris Saint Germano (0-1) Patetico Mineiro
+title: ApoelKan (3-0) Paris Saint Germano
 permalink: /2022_2023/coppa/giornate/1/partite/2
 ---
 
@@ -12,9 +12,9 @@ permalink: /2022_2023/coppa/giornate/1/partite/2
 {% endfor %}<h1>Titolari</h1>
 <table>
   <tr>
-    <td colspan="4">Paris Saint Germano (433)</td>
+    <td colspan="4">ApoelKan (433)</td>
     <td></td>
-    <td colspan="4">Patetico Mineiro (433)</td>
+    <td colspan="4">Paris Saint Germano (433)</td>
   </tr>
     <th>Nome</th>
     <th></th>
@@ -27,125 +27,125 @@ permalink: /2022_2023/coppa/giornate/1/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Milinkovic-Savic V.</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td>LAZ</td>
+    <td>7.0</td>
+    <td>8.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Milinkovic-Savic V.</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>TOR</td>
     <td>6.0</td>
-    <td>7.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> <b>Rui Patricio</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>ROM</td>
     <td>5.0</td>
-    <td>1.0</td>
   </tr>
   <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>ROM</td>
+    <td>7.0</td>
+    <td>10.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <del>Soppy</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
+    <td>ATA</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
+    <td>MIL</td>
+    <td>6.5</td>
+    <td>6.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>D'ambrosio</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>INT</td>
+    <td>6.0</td>
+    <td>5.5</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"></span></td>
+    <td>NAP</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Bonucci</b></span><span style="display: block"></span></td>
+    <td>JUV</td>
+    <td>5.0</td>
+    <td>5.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Darmian</b></span><span style="display: block"></span></td>
+    <td>INT</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <del>Faraoni</del></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/out.webp" alt="Uscito"></span></td>
     <td>VER</td>
     <td>-</td>
     <td>-</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kiwior</b></span><span style="display: block"></span></td>
-    <td>SPE</td>
-    <td>5.5</td>
-    <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Soppy</b></span><span style="display: block"></span></td>
-    <td>ATA</td>
-    <td>6.0</td>
-    <td>6.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Parisi</b></span><span style="display: block"></span></td>
-    <td>EMP</td>
-    <td>6.0</td>
-    <td>6.0</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"></span></td>
-    <td>NAP</td>
-    <td>6.5</td>
-    <td>6.5</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Kyriakopoulos</b></span><span style="display: block"></span></td>
-    <td>SAS</td>
-    <td>5.5</td>
-    <td>5.5</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Reca</b></span><span style="display: block"></span></td>
-    <td>SPE</td>
-    <td>6.0</td>
-    <td>6.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Dumfries</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Mkhitaryan</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>INT</td>
-    <td>5.0</td>
-    <td>4.5</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Messias</b></span><span style="display: block"></span></td>
-    <td>MIL</td>
-    <td>5.5</td>
-    <td>5.5</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Bajrami</b></span><span style="display: block"></span></td>
-    <td>EMP</td>
-    <td>6.0</td>
-    <td>6.0</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
-    <td>LAZ</td>
-    <td>5.5</td>
-    <td>5.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Pereyra</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"></span></td>
-    <td>UDI</td>
+    <td>7.0</td>
     <td>8.0</td>
-    <td>11.5</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Djuricic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td>SAM</td>
+    <td>7.0</td>
+    <td>9.5</td>
   </tr>
   <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td>NAP</td>
+    <td>7.0</td>
+    <td>8.5</td>
+    <td></td>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Radonjic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Sensi</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>MON</td>
     <td>6.5</td>
-    <td>6.5</td>
+    <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Zielinski</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/assist.png" alt="Assist argento"><img src="{{ site.baseurl }}/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td>LAZ</td>
+    <td>7.5</td>
+    <td>10.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>NAP</td>
-    <td>6.5</td>
     <td>7.0</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"></span></td>
-    <td>SPE</td>
-    <td>5.0</td>
-    <td>5.0</td>
+    <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Dessers</b></span><span style="display: block"></span></td>
-    <td>CRE</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>SPE</td>
     <td>6.0</td>
-    <td>6.0</td>
+    <td>5.5</td>
   </tr>
   <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"></span></td>
+    <td>MIL</td>
+    <td>7.0</td>
+    <td>7.0</td>
+    <td></td>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
     <td>INT</td>
-    <td>6.0</td>
-    <td>6.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Osimhen</b></span><span style="display: block"></span></td>
-    <td>NAP</td>
-    <td>6.0</td>
-    <td>6.0</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
-    <td>VER</td>
-    <td>7.0</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Banda</b></span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Arnautovic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
-    <td>BOL</td>
-    <td>7.5</td>
-    <td>13.5</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"></span></td>
+    <td>VER</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
 </table>
 <h1>Panchina</h1>
@@ -161,88 +161,88 @@ permalink: /2022_2023/coppa/giornate/1/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Montipò</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
-    <td>VER</td>
-    <td>6.0</td>
-    <td>5.0</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
+    <td>LAZ</td>
+    <td>-</td>
+    <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Svilar</span><span style="display: block"></span></td>
-    <td>ROM</td>
-    <td>-</td>
-    <td>-</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_p.png" alt="P"> Montipo'</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"><img src="{{ site.baseurl }}/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td>VER</td>
+    <td>5.5</td>
+    <td>3.5</td>
   </tr>
   <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Bereszynski</span><span style="display: block"></span></td>
+    <td>SAM</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
+    <td>NAP</td>
+    <td>6.0</td>
+    <td>6.0</td>
+  </tr>
+  <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Scalvini</span><span style="display: block"></span></td>
+    <td>ATA</td>
+    <td>6.0</td>
+    <td>6.0</td>
+    <td></td>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Gosens</span><span style="display: block"></span></td>
     <td>INT</td>
     <td>-</td>
     <td>-</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> Ferrari G.</span><span style="display: block"></span></td>
-    <td>SAS</td>
-    <td>6.0</td>
-    <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> <b>Stojanovic</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
-    <td>EMP</td>
-    <td>5.5</td>
-    <td>5.5</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Calhanoglu</span><span style="display: block"></span></td>
+    <td>INT</td>
+    <td>6.5</td>
+    <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_d.png" alt="D"> De Silvestri</span><span style="display: block"></span></td>
-    <td>BOL</td>
-    <td>5.5</td>
-    <td>5.5</td>
-  </tr>
-  <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Lobotka</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> <b>Lobotka</b></span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/in.webp" alt="Entrato"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Cristante</span><span style="display: block"></span></td>
-    <td>ROM</td>
-    <td>5.5</td>
-    <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Djuricic</span><span style="display: block"></span></td>
-    <td>SAM</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Lopez M.</span><span style="display: block"></span></td>
+    <td>SAS</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> De Roon</span><span style="display: block"></span></td>
-    <td>ATA</td>
-    <td>6.5</td>
-    <td>6.5</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_c.png" alt="C"> Soriano</span><span style="display: block"></span></td>
+    <td>BOL</td>
+    <td>-</td>
+    <td>-</td>
   </tr>
   <tr>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Kean</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td>JUV</td>
+    <td>6.0</td>
+    <td>5.5</td>
+    <td></td>
     <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Gonzalez N.</span><span style="display: block"></span></td>
     <td>FIO</td>
-    <td>-</td>
-    <td>-</td>
-    <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Raspadori</span><span style="display: block"></span></td>
-    <td>NAP</td>
-    <td>6.0</td>
-    <td>6.0</td>
+    <td>5.5</td>
+    <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ammonito.png" alt="Giallo"><img src="{{ site.baseurl }}/assets/img/golFatto.png" alt="Gol"></span></td>
-    <td>EMP</td>
-    <td>6.5</td>
-    <td>9.0</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Di Francesco F.</span><span style="display: block"></span></td>
+    <td>LEC</td>
+    <td>6.0</td>
+    <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Lasagna</span><span style="display: block"></span></td>
-    <td>VER</td>
-    <td>5.5</td>
-    <td>5.5</td>
+    <td><span style="display: block"><img src="{{ site.baseurl }}/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"></span></td>
+    <td>EMP</td>
+    <td>-</td>
+    <td>-</td>
   </tr>
 </table>
 <table>
   <tr>
     <td>0</td>
     <td style="text-align: center" colspan="7">Modificatore difesa</td>
-    <td>-2</td>
+    <td>-4</td>
   </tr>
   <tr>
     <td>0</td>
@@ -252,11 +252,11 @@ permalink: /2022_2023/coppa/giornate/1/partite/2
   <tr>
     <td>433</td>
     <td style="text-align: center" colspan="7">Modulo finale</td>
-    <td>433</td>
+    <td>343</td>
   </tr>
   <tr>
-    <td>65.5</td>
+    <td>82.5</td>
     <td style="text-align: center" colspan="7">Punti totali</td>
-    <td>70.5</td>
+    <td>65.5</td>
   </tr>
 </table>
